add authentication, tokenHandler

--- a/NZWalks.API/NZWalks.API/appsettings.json
+++ b/NZWalks.API/NZWalks.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "NZWalks": "server=.;database=NZWalksDb;Trusted_Connection=true"
+  },
+  "Jwt": {
+    "Key": "cZA9M8ON3Uw-cZA9M8ON3Uw-cZA9M8ON3Uw-cZA9M8ON3Uw",
+    "Issuer": "https://locahost",
+    "Audience": "https://localhost"
   }
 }
